Added Reset Functionality and some animation

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,9 @@
   </button>
   <button id="downloadExcelBtn" onclick="downloadExcel()" class="neon-button flex items-center gap-4 text-sm px-4 py-2 hidden">
     <i class="ph ph-download-simple"></i>
-    Download Excel
+    Export to Excel
   </button>
+  <button id="resetBtn" class="neon-button" onclick="resetTool()">Reset</button>
 </div>
     </div>
   </div>
