--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
   <div class="max-w-4xl mx-auto bg-[#2a2a2a] p-4 sm:p-6 rounded-2xl shadow-md">
     <h1 class="text-3xl sm:text-5xl font-extrabold text-center mb-6 sm:mb-8 text-green-400">IP Lookup</h1>
 
-    <textarea id="ipInput" rows="6" class="w-full p-3 sm:p-4 text-base sm:text-lg rounded-lg border-2 border-green-400 bg-[#1e1e1e] text-white placeholder-gray-400" placeholder="Enter IPs separated by comma, space, or new line..."></textarea>
+    <textarea id="ipInput" autocomplete="off" rows="6" class="w-full p-3 sm:p-4 text-base sm:text-lg rounded-lg border-2 border-green-400 bg-[#1e1e1e] text-white placeholder-gray-400" placeholder="Enter IPs separated by comma, space, or new line..."></textarea>
 
         <!-- Message Section -->
     <div id="messageBlock" class="mt-10 hidden border border-yellow-400 rounded-xl p-6 bg-[#1e1e1e]">
