Fixed error on js lower case

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/script.obfuscated.js') }}"></script>
+<script src="{{ url_for('static', filename='JS/script.obfuscated.js') }}"></script>
 
 </body>
 </html>
